feature branch : more code review changes & findbugs pass